--- a/blog.html
+++ b/blog.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="container">
-<h1 class="text-center">Blog Page</h1>
+<h1 class="text-center mb-4 mt-3 text-uppercase text-primary">Blog Page</h1>
 
-<div class="d-flex flex-column">
+<div class="d-flex flex-column mb-5 bg-dark text-light p-5">
     <!-- question-1  -->
     <div>
         <h3>1.What is DOM and what is the purpose of DOM?</h3>
