--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         </nav>
       </header>
       <!--/header section-->
+      <!--start card section  -->
       <section class="card-section mt-5 mb-5">
         <!-- first row  -->
         <div class="row gx-3">
-          <div class="col-lg-3">
+          <div class="col-lg-3 mb-3">
             <!-- triangle section  -->
             <div class="card text-center">
               <img
@@ -76,7 +77,7 @@
           <!--/col-lg-3-->
 
           <!-- rectangle section  -->
-          <div class="col-lg-3">
+          <div class="col-lg-3 mb-3">
             <div class="card text-center">
               <img
                 src="images/rectangle.png"
@@ -114,7 +115,7 @@
           <!--/col-lg-3-->
 
           <!-- parallelogram part  -->
-          <div class="col-lg-3">
+          <div class="col-lg-3 mb-3">
             <div class="card text-center">
               <img
                 src="images/parallelogram.png"
@@ -131,14 +132,14 @@
                     type="text"
                     class="form-control w-50"
                     placeholder="b"
-                    id="base"
+                    id="b"
                   />
                   &nbsp; <span>cm</span> &nbsp;
                   <input
                     type="text"
                     class="form-control w-50"
                     placeholder="h"
-                    id="height"
+                    id="h"
                   />&nbsp; <span>cm</span>&nbsp;
                 </div>
                 <button id="paraArea" class="btn btn-primary w-100">
@@ -152,7 +153,7 @@
           <!--/col-lg-3-->
 
           <!-- Area Calculation part  -->
-          <div class="col-lg-3">
+          <div class="col-lg-3 mb-3">
             <div class="card">
               <h5 class="card-title text-decoration-underline text-center mb-3">
                 Area Calculation
@@ -228,7 +229,7 @@
         <!-- second row  -->
         <div class="row mt-5 gx-3">
           <!-- rhombus part  -->
-          <div class="col-lg-3">
+          <div class="col-lg-3 mb-3">
             <div class="card text-center">
               <img
                 src="images/rhombus.png"
@@ -267,7 +268,7 @@
           <!--/col-lg-3-->
 
           <!-- pentagon part  -->
-          <div class="col-lg-3">
+          <div class="col-lg-3 mb-3">
             <div class="card text-center">
               <img
                 src="images/pentagon.png"
@@ -306,7 +307,7 @@
           <!--/col-lg-3-->
 
           <!-- ellipse part  -->
-          <div class="col-lg-3">
+          <div class="col-lg-3 mb-3">
             <div class="card text-center">
               <img
                 src="images/ellipse.png"
@@ -343,7 +344,7 @@
         </div>
         <!--/row--><!--/second row-->
       </section>
-      <!--/card-section-->
+      <!--/end card-section-->
     </div>
     <!--/container-->
 
