--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row gx-3">
           <div class="col-lg-3 mb-3">
             <!-- triangle section  -->
-            <div class="card text-center">
+            <div class="card text-center" id="triangleCard">
               <img
                 src="images/triangle.png"
                 class="card-img-top w-75 mx-auto"
@@ -78,7 +78,7 @@
 
           <!-- rectangle section  -->
           <div class="col-lg-3 mb-3">
-            <div class="card text-center">
+            <div class="card text-center" id="rectangleCard">
               <img
                 src="images/rectangle.png"
                 class="card-img-top w-75 mx-auto p-1"
@@ -116,7 +116,7 @@
 
           <!-- parallelogram part  -->
           <div class="col-lg-3 mb-3">
-            <div class="card text-center">
+            <div class="card text-center" id="paralellogramCard">
               <img
                 src="images/parallelogram.png"
                 class="card-img-top w-75 mx-auto p-1"
@@ -154,15 +154,15 @@
 
           <!-- Area Calculation part  -->
           <div class="col-lg-3 mb-3">
-            <div class="card">
+            <div class="card" id="areaCard">
               <h5 class="card-title text-decoration-underline text-center mb-3">
                 Area Calculation
               </h5>
 
               <div id="triangle-result">
-                <div class="d-flex gap-2">
-                  1.<span id="result"></span><span>cm<sup>2</sup></span>
-                  <button class="btn" id="convertBtn">
+                <div class="d-flex gap-2 justify-content-center ">
+                  1.Triangle <span id="result"></span><span>cm<sup>2</sup></span>
+                  <button  id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
                 </div>
@@ -172,8 +172,8 @@
 
               <div id="rectangle-result">
                 <div class="d-flex gap-2">
-                  2.<span id="recresult"></span><span>cm<sup>2</sup></span>
-                  <button class="btn" id="convertBtn">
+                  2.Rectangle <span id="recresult"></span><span>cm<sup>2</sup></span>
+                  <button  id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
                 </div>
@@ -182,7 +182,7 @@
 
               <div id="paralellogram-result">
                 <div class="d-flex gap-2">
-                  3.<span id="paraResult"></span><span>cm<sup>2</sup></span>
+                  3.Paralellogram <span id="paraResult"></span><span>cm<sup>2</sup></span>
                   <button class="btn" id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
@@ -192,7 +192,7 @@
 
               <div id="rhombus-result">
                 <div class="d-flex gap-2">
-                  4.<span id="rhombusResult"></span><span>cm<sup>2</sup></span>
+                  4.Rhombus <span id="rhombusResult"></span><span>cm<sup>2</sup></span>
                   <button class="btn" id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
@@ -202,7 +202,7 @@
 
               <div id="pentagon-result">
                 <div class="d-flex gap-2">
-                  5.<span id="pentagonResult"></span><span>cm<sup>2</sup></span>
+                  5.Pentagon <span id="pentagonResult"></span><span>cm<sup>2</sup></span>
                   <button class="btn" id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
@@ -212,7 +212,7 @@
 
               <div id="ellipse-result">
                 <div class="d-flex gap-2">
-                  6.<span id="ellipseResult"></span><span>cm<sup>2</sup></span>
+                  6.Ellipse <span id="ellipseResult"></span><span>cm<sup>2</sup></span>
                   <button class="btn" id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
@@ -230,7 +230,7 @@
         <div class="row mt-5 gx-3">
           <!-- rhombus part  -->
           <div class="col-lg-3 mb-3">
-            <div class="card text-center">
+            <div class="card text-center" id="rhombusCard">
               <img
                 src="images/rhombus.png"
                 class="card-img-top w-75 mx-auto p-1"
@@ -269,7 +269,7 @@
 
           <!-- pentagon part  -->
           <div class="col-lg-3 mb-3">
-            <div class="card text-center">
+            <div class="card text-center" id="pentagonCard">
               <img
                 src="images/pentagon.png"
                 class="card-img-top w-75 mx-auto p-1"
@@ -308,7 +308,7 @@
 
           <!-- ellipse part  -->
           <div class="col-lg-3 mb-3">
-            <div class="card text-center">
+            <div class="card text-center" id="ellipseCard">
               <img
                 src="images/ellipse.png"
                 class="card-img-top w-75 mx-auto p-1"
