right alignment of code

--- a/index.html
+++ b/index.html
@@ -160,11 +160,10 @@
               </h5>
 
               <div id="triangle-result">
-                <div class="d-flex gap-2 justify-content-center ">
-                  1.Triangle <span id="result"></span><span>cm<sup>2</sup></span>
-                  <button  id="convertBtn">
-                    Convert to m<sup>2</sup>
-                  </button>
+                <div class="d-flex gap-2 justify-content-center">
+                  1.Triangle <span id="result"></span
+                  ><span>cm<sup>2</sup></span>
+                  <button id="convertBtn">Convert to m<sup>2</sup></button>
                 </div>
                 <!--/d-flex-->
               </div>
@@ -172,17 +171,17 @@
 
               <div id="rectangle-result">
                 <div class="d-flex gap-2">
-                  2.Rectangle <span id="recresult"></span><span>cm<sup>2</sup></span>
-                  <button  id="convertBtn">
-                    Convert to m<sup>2</sup>
-                  </button>
+                  2.Rectangle <span id="recresult"></span
+                  ><span>cm<sup>2</sup></span>
+                  <button id="convertBtn">Convert to m<sup>2</sup></button>
                 </div>
               </div>
               <br /><!--/rectangle-result-->
 
               <div id="paralellogram-result">
                 <div class="d-flex gap-2">
-                  3.Paralellogram <span id="paraResult"></span><span>cm<sup>2</sup></span>
+                  3.Paralellogram <span id="paraResult"></span
+                  ><span>cm<sup>2</sup></span>
                   <button class="btn" id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
@@ -192,7 +191,8 @@
 
               <div id="rhombus-result">
                 <div class="d-flex gap-2">
-                  4.Rhombus <span id="rhombusResult"></span><span>cm<sup>2</sup></span>
+                  4.Rhombus <span id="rhombusResult"></span
+                  ><span>cm<sup>2</sup></span>
                   <button class="btn" id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
@@ -202,7 +202,8 @@
 
               <div id="pentagon-result">
                 <div class="d-flex gap-2">
-                  5.Pentagon <span id="pentagonResult"></span><span>cm<sup>2</sup></span>
+                  5.Pentagon <span id="pentagonResult"></span
+                  ><span>cm<sup>2</sup></span>
                   <button class="btn" id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
@@ -212,7 +213,8 @@
 
               <div id="ellipse-result">
                 <div class="d-flex gap-2">
-                  6.Ellipse <span id="ellipseResult"></span><span>cm<sup>2</sup></span>
+                  6.Ellipse <span id="ellipseResult"></span
+                  ><span>cm<sup>2</sup></span>
                   <button class="btn" id="convertBtn">
                     Convert to m<sup>2</sup>
                   </button>
