--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
         <p>--> A function is callback this function is parameter of another function and call inside of function.It will use when make sure that a function is going to get execute after a specific task is completed not before complte execution.</p>
 
     </div>
-</div>
+</div><!--/d-flex-->
     </div><!--/container-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
